Fixed contrast issues

--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -18,7 +18,7 @@ a {
   --fg: #0F1115;
   --fg-05: #27b82718;
   --bg: white;
-  --green: #27b827;
+  --green: #22a222;
 }
 
 
